# try-rye

./: pyproject.toml
src/: main.py
